Align icons in headings correctly.

--- a/.asciidoctor/neptune-preview.css
+++ b/.asciidoctor/neptune-preview.css
@@ -46,4 +46,10 @@ b, dt, strong, th {
   font-weight: 500;
 }
 
+/* Align icons in headings */
+img, object, svg {
+    display: inline-block;
+    vertical-align: middle;
+}
+
 
